--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Fumble
-description: A simple Code Golfing language that utilizes an LLM in order to execute.
+title: Song Studio - Suno
+description: Tools for making Suno prompts easier and more intuitive to get closers to what you want on the first try.
 remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
